feat: port SphericalUtil to Kotlin
This commit ports the `SphericalUtil` class from Java to idiomatic Kotlin.

The existing tests were leveraged to ensure that the port was successful, and the tests were updated to use Google Truth assertions.